--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,31 +1,29 @@
 name: Playwright Integration Tests
 on:
   push:
-    branches: [ main, master ]
+    branches: [ main ]
   pull_request:
-    branches: [ main, master ]
+    branches: [ main ]
 jobs:
   test:
-    timeout-minutes: 60
+    timeout-minutes: 30
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
     - uses: actions/setup-node@v3
       with:
-        node-version: 16
+        node-version: 18
+    - name: Docker up
+      run: docker-compose up -d
     - name: Install dependencies
       run: npm install
     - name: Install Playwright Browsers
       run: npx playwright install --with-deps
-    - name: Install api dependencies
-      run: cd apps/api; npm install
-    - name: Install web dependencies
-      run: cd apps/web; npm install
-    - name: Intal
-      run: cd apps/web; npm install
-    - uses: actions/upload-artifact@v3
-      if: always()
-      with:
-        name: Report
-        path: test-results
-        retention-days: 2
+    - name: Run tests
+      run: npx playwright test
+    # - uses: actions/upload-artifact@v3
+    #   if: always()
+    #   with:
+    #     name: Report
+    #     path: test-results
+    #     retention-days: 2
