--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -19,6 +19,10 @@ jobs:
       run: npm install
     - name: Install Playwright Browsers
       run: npx playwright install --with-deps
+    - name: Wait for api
+      run: sh wait-for-it.sh localhost:8080
+    - name: Wait for web
+      run: sh wait-for-it.sh localhost:3333
     - name: Run tests
       run: npx playwright test
     # - uses: actions/upload-artifact@v3
