--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -5,7 +5,7 @@ on:
   pull_request:
     branches: [ main ]
 jobs:
-  test:
+  test-web:
     timeout-minutes: 30
     runs-on: ubuntu-latest
     steps:
@@ -20,7 +20,30 @@ jobs:
     - name: Install Playwright Browsers
       run: npx playwright install --with-deps
     - name: Run tests
-      run: npx playwright test
+      run: npx playwright test home-front.test.ts
+    - uses: actions/upload-artifact@v4
+      if: always()
+      with:
+        name: playwright-report
+        path: playwright-report/
+        retention-days: 10
+
+  test-api:
+    timeout-minutes: 30
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v4
+    - uses: actions/setup-node@v4
+      with:
+        node-version: 18
+    - name: Docker up
+      run: docker-compose up -d
+    - name: Install dependencies
+      run: npm install
+    - name: Install Playwright Browsers
+      run: npx playwright install --with-deps
+    - name: Run tests
+      run: npx playwright test home-api.test.ts
     - uses: actions/upload-artifact@v4
       if: always()
       with:
